--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav {
 }
 
 .logo {
-    width: 140px;
+    width: 250px;
 }
 
 nav ul li {
@@ -50,7 +50,7 @@ nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #21B291;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -72,7 +72,7 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 span {
-    color: #ff004f;
+    color: #21B291;
 }
 
 /* ----------ABOUT---------- */
@@ -123,7 +123,7 @@ nav ul li a:hover::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #21B291;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -143,7 +143,7 @@ width: 100%;
 }
 
 .tab-contents ul li span {
-    color: #b54768;
+    color: #21B291;
     font-size: 14px;
 }
 
@@ -197,7 +197,7 @@ width: 100%;
 }
 
 .services-list div:hover {
-    background: #ff004f;
+    background: #21B291;
     transform: translateY(-10px);
 }
 
@@ -229,7 +229,7 @@ width: 100%;
 .layer {
     width: 100%;
     height: 0;
-    background: #ff004f;
+    background: #21B291;
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -274,7 +274,7 @@ width: 100%;
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #21B291;
     padding: 14px 50px;
     border-radius: 6px;
     color: #fff;
@@ -283,8 +283,29 @@ width: 100%;
 }
 
 .btn:hover {
-    background: #ff004f;
+    background: #21B291;
 }
+
+/* Add these styles to hide additional works initially */
+.work-list .work:nth-child(n+5) {
+    display: none;
+}
+
+/* Button styles */
+.btn-show-more {
+    display: block;
+    margin-top: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.btn-show-less {
+    display: none;
+    margin-top: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
 
 /* ----------CONTACT---------- */
 .contact-left {
@@ -300,7 +321,7 @@ width: 100%;
 }
 
 .contact-left p i {
-    color: #ff004f;
+    color: #21B291;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -319,7 +340,7 @@ width: 100%;
 }
 
 .social-icons a:hover {
-    color: #ff004f;
+    color: #21B291;
     transform: translateY(-5px);
 }
 
@@ -335,7 +356,7 @@ width: 100%;
 }
 
 .btn.btn3:hover {
-    background: #ff004f;
+    background: #21B291;
 }
 
 .contact-right form {
@@ -365,7 +386,7 @@ form textarea {
 }
 
 .copyright i {
-    color: #ff004f;
+    color: #21B291;
     transition: color 0.5s;
 }
 
@@ -398,7 +419,7 @@ nav .fas {
     }
 
     nav ul {
-        background: #b54768;
+        background: #21B291;
         position: fixed;
         top: 0;
         width: 200;
@@ -442,7 +463,7 @@ nav .fas {
     }
 
     nav ul {
-        background: #b54768;
+        background: #21B291;
         position: fixed;
         top: 0;
         width: 200px;
