--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     color: #fff;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 #header {
     width: 100%;
     height: 100vh;
@@ -400,43 +404,6 @@ nav .fas {
 
 /* ----------CSS FOR SMALL SCREEN---------- */
 @media only screen and (max-width: 600px) {
-    #header {
-        background-image: url(images/phone-background.png);
-    }
-
-    .header-text {
-        margin-top: 100%;
-        font-size: 16px;
-    }
-
-    .header-text h1 {
-        font-size: 30px;
-    }
-
-    nav .fas {
-        display: block;
-        font-size: 25px;
-    }
-
-    nav ul {
-        background: #21B291;
-        position: fixed;
-        top: 0;
-        width: 200;
-        right: 0;
-        height: 100vh;
-        padding-top: 50px;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 25px;
-    }
-
-}
-
-/* ----------CSS FOR SMALL SCREEN---------- */
-@media only screen and (max-width: 600px) {
 
     /* Adjust the header image and text size for small screens */
     #header {
@@ -453,9 +420,14 @@ nav .fas {
     }
 
     /* Show the navigation menu on small screens */
-    nav ul {
+    /* nav ul {
+        background: #21B291;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: ;
         display: none;
-    }
+    } */
 
     nav .fas {
         display: block;
@@ -468,21 +440,59 @@ nav .fas {
         top: 0;
         width: 200px;
         /* Increased the width to accommodate the menu items */
-        right: 0;
+        right: -200px;
         height: 100vh;
         padding-top: 50px;
-        transform: translateX(200px);
+        z-index: 2;
+        transition: right 0.5s;
+        /* transform: translateX(200px); */
         /* Off-canvas menu, initially hidden */
-        transition: transform 0.3s ease-in-out;
+        /* transition: transform 0.3s ease-in-out; */
     }
 
-    nav ul.show {
+    /* nav ul.show {
         transform: translateX(0);
         /* Show the menu when 'show' class is applied */
-    }
+    /* } */
 
     nav ul li {
         display: block;
         margin: 25px;
     }
+
+    nav ul .fas{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title{
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+}
+
+#msg{
+    color: #db1436;
+    margin-top: -40px;
+    display: block;
 }
