--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html{
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(Images/background.png);
     background-size: cover;
     background-position: center;
 }
@@ -407,7 +407,7 @@ nav .fas {
 
     /* Adjust the header image and text size for small screens */
     #header {
-        background-image: url(images/phone-background.png);
+        background-image: url(Images/phone-background.png);
     }
 
     .header-text {
